Finished chapter 1 and 6

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -137,6 +137,7 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}MSE - Mean Squared Error
 \paragraph{}RMSE - Root Mean Squared Error
 \paragraph{}ACC - Accuracy
+\paragraph{}LSTM - Long Short-Term Memory
 \pagebreak
 
 
